[feat] filter,pagination and sorting is applied on getAllMovies